==> conservationtechlab/tinyscrubcam/googleCoralBuild/googleCoral/coralmicro/third_party/nxp/rt1176-sdk/middleware/wiced/43xxx_Wi-Fi/WICED/platform/MCU/PSoC6/peripherals/platform_uart.c <==
#include <stdint.h>
#include <string.h>
#include "wiced_platform.h"
#include "platform_config.h"
#include "platform_peripheral.h"
#include "platform_sleep.h"
#include "platform_assert.h"
#include "wwd_assert.h"
#include "wiced_rtos.h"
#include "wiced_low_power.h"
#define SCB_UART_TX_BUFFER_SIZE 8
#define SCB_UART_RX_BUFFER_SIZE 8
#define SCB_UART_TX_MAX_WAIT_TIME_MS (100)
#define SCB_UART_PORT_MAX 8

platform_result_t platform_uart_init( platform_uart_driver_t* driver, const platform_uart_t* peripheral, const platform_uart_config_t* config, wiced_ring_buffer_t* optional_ring_buffer )
{
    const platform_scb_t* platform_scb;
    CySCB_Type* scb_uart;
    cy_stc_scb_uart_config_t scb_uart_config;
    scb_uart_baudrate_config_t* baudrate_conf;

    platform_mcu_powersave_disable();

    if ( (driver == NULL) || (peripheral == NULL) || (config == NULL) )
    {
        wiced_assert( "Bad argument", 0 );
        return PLATFORM_ERROR;
    }

    if ( optional_ring_buffer != NULL )
    {
        if ( (optional_ring_buffer->buffer == NULL) || (optional_ring_buffer->size == 0) )
        {
            wiced_assert("Bad ring buffer", 0 );
            return PLATFORM_ERROR;
        }
    }

    /* Get port details. */
    platform_scb = peripheral->scb;

    /* Lookup the baudrate config */
    baudrate_conf = platform_uart_baudrate_config( config->baud_rate );

    if ( baudrate_conf == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    /* Lookup the SCB UART instance */
    scb_uart = platform_scb->scb_base;

    if ( scb_uart == NULL )
    {
        return PLATFORM_UNSUPPORTED;
    }

    /* Disable the SCB UART */
    Cy_SCB_UART_Disable( scb_uart, NULL );

    /* Reset SCB UART driver handle */
    scb_uart_driver[peripheral->port] = NULL;

    /* Initialize the SCB UART driver parameters */
    driver->rx_size      = 0;
    driver->tx_size      = 0;
    driver->rx_overflow  = 0;
    driver->tx_underflow = 0;
    driver->peripheral   = (platform_uart_t*)peripheral;

#ifndef PSOC6_SCB_UART_POLL_MODE
    host_rtos_init_semaphore( &driver->rx_complete );
    host_rtos_init_semaphore( &driver->tx_complete );
    host_rtos_set_semaphore( &driver->tx_complete, WICED_FALSE );
#endif /* !PSOC6_SCB_UART_POLL_MODE */

    /* Setup the SCB UART configuration structure */
    scb_uart_config.uartMode                   = CY_SCB_UART_STANDARD;
    scb_uart_config.enableMutliProcessorMode   = false;
    scb_uart_config.smartCardRetryOnNack       = false;
    scb_uart_config.irdaInvertRx               = false;
    scb_uart_config.irdaEnableLowPowerReceiver = false;

    scb_uart_config.oversample                 = baudrate_conf->oversample;

    scb_uart_config.enableMsbFirst             = false;
    scb_uart_config.enableInputFilter          = false;
    scb_uart_config.breakWidth                 = 11;
    scb_uart_config.dropOnFrameError           = false;
    scb_uart_config.dropOnParityError          = false;

    scb_uart_config.receiverAddress            = 0x0;
    scb_uart_config.receiverAddressMask        = 0x0;
    scb_uart_config.acceptAddrInFifo           = false;

    scb_uart_config.rxFifoTriggerLevel         = 0;
    scb_uart_config.rxFifoIntEnableMask        = 0;

    scb_uart_config.txFifoTriggerLevel         = 0;
    scb_uart_config.txFifoIntEnableMask        = 0;

    switch ( config->data_width )
    {
        case DATA_WIDTH_5BIT:
            scb_uart_config.dataWidth = 5;
            break;

        case DATA_WIDTH_6BIT:
            scb_uart_config.dataWidth = 6;
            break;

        case DATA_WIDTH_7BIT:
            scb_uart_config.dataWidth = 7;
            break;

        case DATA_WIDTH_8BIT:
            scb_uart_config.dataWidth = 8;
            break;

        case DATA_WIDTH_9BIT:
            scb_uart_config.dataWidth = 9;
            break;

        default:
            return PLATFORM_BADARG;
    }

    switch ( config->parity )
    {
        case NO_PARITY:
            scb_uart_config.parity = CY_SCB_UART_PARITY_NONE;
            break;

        case EVEN_PARITY:
            scb_uart_config.parity = CY_SCB_UART_PARITY_EVEN;
            break;

        case ODD_PARITY:
            scb_uart_config.parity = CY_SCB_UART_PARITY_ODD;
            break;

        default:
            return PLATFORM_BADARG;
    }

    switch ( config->stop_bits )
    {
        case STOP_BITS_1:
            scb_uart_config.stopBits = CY_SCB_UART_STOP_BITS_1;
            break;

        case STOP_BITS_2:
            scb_uart_config.stopBits = CY_SCB_UART_STOP_BITS_2;
            break;

        default:
            return PLATFORM_BADARG;
    }

    switch ( config->flow_control )
    {
        case FLOW_CONTROL_DISABLED:
        {
            scb_uart_config.enableCts                  = false;
            scb_uart_config.ctsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            scb_uart_config.rtsRxFifoLevel             = 0;
            scb_uart_config.rtsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            break;
        }

        case FLOW_CONTROL_CTS:
        {
            scb_uart_config.enableCts                  = true;
            scb_uart_config.ctsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            scb_uart_config.rtsRxFifoLevel             = 0;
            scb_uart_config.rtsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            break;
        }

        case FLOW_CONTROL_RTS:
        {
            scb_uart_config.enableCts                  = false;
            scb_uart_config.ctsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            scb_uart_config.rtsRxFifoLevel             = 1;
            scb_uart_config.rtsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            break;
        }

        case FLOW_CONTROL_CTS_RTS:
        {
            scb_uart_config.enableCts                  = true;
            scb_uart_config.ctsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            scb_uart_config.rtsRxFifoLevel             = 1;
            scb_uart_config.rtsPolarity                = CY_SCB_UART_ACTIVE_LOW;
            break;
        }

        default:
            return PLATFORM_BADARG;
    }

    /* Setup RX ring buffer and related parameters */
    if ( optional_ring_buffer != NULL )
    {
        driver->rx_buffer = optional_ring_buffer;
    }
    else
    {
        ring_buffer_init( &scb_uart_buffer[peripheral->port].rx_buffer, scb_uart_buffer[peripheral->port].rx_data, SCB_UART_RX_BUFFER_SIZE );
        driver->rx_buffer = &scb_uart_buffer[peripheral->port].rx_buffer;
    }

    /* Setup TX ring buffer and related parameters */
    ring_buffer_init( &scb_uart_buffer[peripheral->port].tx_buffer, scb_uart_buffer[peripheral->port].tx_data, SCB_UART_TX_BUFFER_SIZE );
    driver->tx_buffer = &scb_uart_buffer[peripheral->port].tx_buffer;

    /* Initialize the SCB UART clock */
    if ( platform_peripheral_clock_init( platform_scb->pclk, baudrate_conf->divider, 0 ) != PLATFORM_SUCCESS )
    {
        return PLATFORM_ERROR;
    }

    /* Initialize the SCB UART pins */
    if ( platform_uart_pin_init( driver ) != PLATFORM_SUCCESS )
    {
        return PLATFORM_ERROR;
    }

    /* Initialize the SCB UART */
    if ( Cy_SCB_UART_Init( scb_uart, &scb_uart_config, NULL ) != CY_SCB_UART_SUCCESS )
    {
        return PLATFORM_ERROR;
    }

    /* Set SCB UART driver handle */
    scb_uart_driver[peripheral->port] = driver;

    /* Enable the SCB UART */
    Cy_SCB_UART_Enable( scb_uart );

#ifndef PSOC6_SCB_UART_POLL_MODE
    /* Enable SCB UART IRQ */
    NVIC_EnableIRQ( platform_scb->irq_num );
    scb_uart_enable_rx_irq( driver );
    scb_uart_enable_tx_irq( driver );
#endif /* !PSOC6_SCB_UART_POLL_MODE */

    platform_mcu_powersave_enable();

    return PLATFORM_SUCCESS;
}

platform_result_t platform_uart_deinit( platform_uart_driver_t* driver )
{
    CySCB_Type* scb_base;
    platform_scb_t const* peripheral_scb;

    if ( driver == NULL )
    {
        wiced_assert( "Bad argument", 0 );
        return PLATFORM_ERROR;
    }

    peripheral_scb = driver->peripheral->scb;
    scb_base = peripheral_scb->scb_base;

    platform_mcu_powersave_disable();

#ifndef PSOC6_SCB_UART_POLL_MODE
    /* Disable SCB UART IRQ */
    scb_uart_disable_rx_irq( driver );
    scb_uart_disable_tx_irq( driver );
    NVIC_DisableIRQ( peripheral_scb->irq_num );
#endif /* !PSOC6_SCB_UART_POLL_MODE */

    /* Disable the SCB UART */
    Cy_SCB_UART_Disable( scb_base, NULL );

    /* Reset SCB UART driver handle */
    scb_uart_driver[driver->peripheral->port] = NULL;

    /* De-initialize the SCB UART */
    Cy_SCB_UART_DeInit( scb_base );

    host_rtos_deinit_semaphore( &driver->rx_complete );
    host_rtos_deinit_semaphore( &driver->tx_complete );
    driver->rx_size      = 0;
    driver->tx_size      = 0;
    driver->rx_overflow  = 0;
    driver->tx_underflow = 0;
    driver->peripheral   = NULL;

    platform_mcu_powersave_enable();

    return PLATFORM_SUCCESS;
}

platform_result_t platform_uart_receive_bytes( platform_uart_driver_t* driver, uint8_t* data_in, uint32_t* expected_data_size, uint32_t timeout_ms )
{
    platform_result_t result = PLATFORM_ERROR;
    uint32_t          data_size_left_to_read;

    if ( ( driver == NULL ) || ( data_in == NULL ) || ( expected_data_size == NULL ) || ( *expected_data_size == 0 ) )
    {
        wiced_assert( "bad argument", 0 );
        return PLATFORM_ERROR;
    }

    data_size_left_to_read = *expected_data_size;

#ifndef PSOC6_SCB_UART_POLL_MODE
    result = platform_uart_receive_bytes_irq( driver, data_in, &data_size_left_to_read, timeout_ms );
#else
    result = platform_uart_receive_bytes_poll( driver, data_in, &data_size_left_to_read, timeout_ms );
#endif /* !PSOC6_SCB_UART_POLL_MODE */

    *expected_data_size -= data_size_left_to_read;

    return result;
}

platform_result_t platform_uart_transmit_bytes( platform_uart_driver_t* driver, const uint8_t* data_out, uint32_t size )
{
    platform_result_t result = PLATFORM_ERROR;

    if ( ( driver == NULL ) || ( data_out == NULL ) || ( size == 0 ) )
    {
        wiced_assert( "bad argument", 0 );
        return PLATFORM_ERROR;
    }

#ifndef PSOC6_SCB_UART_POLL_MODE
    result = platform_uart_transmit_bytes_irq( driver, data_out, size );
#else
    result = platform_uart_transmit_bytes_poll( driver, data_out, size );
#endif /* !PSOC6_SCB_UART_POLL_MODE */

    return result;
}

void platform_uart_irq( uint32_t port )
{
    uint32_t flags;
    platform_uart_driver_t* driver;
    CySCB_Type* scb_base;

    WICED_SAVE_INTERRUPTS(flags);

    driver   = scb_uart_driver[port];
    scb_base = driver->peripheral->scb->scb_base;

    if ( (Cy_SCB_GetInterruptCause(scb_base) & CY_SCB_RX_INTR) != 0 )
    {
        if ( (Cy_SCB_GetRxInterruptStatusMasked(scb_base) & CY_SCB_UART_RX_NOT_EMPTY) != 0 )
        {
            platform_uart_rx_irq( driver );
        }
    }

    if ( (Cy_SCB_GetInterruptCause(scb_base) & CY_SCB_TX_INTR) != 0 )
    {
        if ( (Cy_SCB_GetTxInterruptStatusMasked(scb_base) & CY_SCB_UART_TX_NOT_FULL) != 0 )
        {
            platform_uart_tx_irq( driver );
        }
    }

    WICED_RESTORE_INTERRUPTS(flags);
}

void platform_uart_irq( uint32_t port )
{

}
